refactor(project): Refactor project DTOs and service
The DTOs were refactored to use Getter/Setter/Builder
annotations. Extracted GetProjectResponse.
Updated ProjectServiceImpl.